--- a/CSS & Typography/04_Buttons-css/styles.css
+++ b/CSS & Typography/04_Buttons-css/styles.css
@@ -10,25 +10,16 @@ body {
   cursor: pointer;
   border: 1px solid rgb(51, 51, 51);
   outline: none;
-}
-
-.first-row .button {
   background-color: rgb(211, 211, 211);
-  color: rgb(251, 251, 251);
+  color: rgb(51, 51, 51);
 }
 
-.second-row .button,
-.third-row .button {
+.fill {
   background: rgb(51, 51, 51);
-  border: rgb(51, 51, 51);
   color: rgb(251, 251, 251);
 }
 
 .hover:hover {
   background-color: rgb(0, 102, 0);
   border-color: rgb(0, 102, 0);
-}
-
-i {
-  margin-right: 5px;
 }
