--- a/CSS & Typography/09_Icon-Font-Buttons/styles.css
+++ b/CSS & Typography/09_Icon-Font-Buttons/styles.css
@@ -1,1 +1,29 @@
-/* TODO: style the html */
+@import "https://use.fontawesome.com/releases/v5.15.4/css/all.css";
+
+body {
+   font-family: Arial, serif;
+   line-height: 3;
+   font-size: 18px;
+}
+
+a {
+   text-decoration: none;
+   color: #fff;
+   border-radius: 5.40px;
+   padding: 12.6px 27px;
+}
+
+a:hover{
+   color: #eee;
+}
+
+i {
+   padding-right: 5.40px;
+}
+
+a.green {
+   background-color: green;
+}
+a.orange {
+   background-color: orange;
+}
